--- a/src/style.css
+++ b/src/style.css
@@ -14,15 +14,44 @@ body {
   margin: 70px 0;
 }
 
-
-svg {
-	vertical-align: middle;
-    text-align:center;
-    left:15%;
-    position:relative; 
-    display:table-cell;
+ .hidden {
+    display: none !important;
 }
 
-.active {
-    fill: #98f5ff;
+div.tooltip {
+    color: #000000;
+    background-color: #fff;
+    border-width: 0.1px;
+    border-style: solid;
+    border-color: #000000;
+    padding: .5em;
+    border-radius: 5px;
+    opacity: 0.9;
+    position: absolute;
+    font-family: "Lato", sans-serif;
+}
+
+div.tooltip_point {
+    color: #000000;
+    background-color: #fff;
+    padding: .5em;
+    border-radius: 5px;
+    border-width: 0.1px;
+    border-style: solid;
+    border-color: #000000;
+    opacity: 0.9;
+    position: absolute;
+    font-family: "Lato", sans-serif;
+    
+}
+
+rect {
+	padding:2px 5px;
+    background: #DEB887;
+    opacity:0.8;
+    color: #f46b6b;
+}
+
+.countriesIDs {
+	font-size: 12px;
 }
